        - Views without a view_definition will throw an exception when
          parsed by SQL::Translator::Parser::DBIx::Class
        - Schema POD improvement for dclone
        - Fix regression in context sensitiveness of deployment_statements
        - Fix regression resulting in overcomplicated query on
          search_related from prefetching resultsets

0.08115 2009-12-10 09:02:00 (CST)
        - Real limit/offset support for MSSQL server (via Row_Number)
        - Fix distinct => 1 with non-selecting order_by (the columns
          in order_by also need to be aded to the resulting group_by)
        - Do not attempt to deploy FK constraints pointing to a View
        - Fix count/objects from search_related on limited resultset
        - Stop propagating distinct => 1 over search_related chains
        - Make sure populate() inherits the resultset conditions just
          like create() does
        - Make get_inflated_columns behave identically to get_columns
          wrt +select/+as (RT#46953)
        - Fix problems with scalarrefs under InflateColumn (RT#51559)
        - Throw exception on delete/update of PK-less resultsets
        - Refactored Sybase storage driver into a central ::DBI::Sybase
          dispatcher, and a sybase-specific ::DBI::Sybase::ASE
        - Fixed an atrocious DBD::ADO bind-value bug
        - Cookbook/Intro POD improvements

0.08114 2009-11-14 17:45:00 (UTC)
        - Preliminary support for MSSQL via DBD::ADO
        - Fix botched 0.08113 release (invalid tarball)

0.08113 2009-11-13 23:13:00 (UTC)
        - Fix populate with has_many bug
          (RT #50828)
        - Fix Oracle autoincrement broken for Resultsets with scalar refs
          (RT #50874)
        - Complete Sybase RDBMS support including:
          - Support for TEXT/IMAGE columns
          - Support for the 'money' datatype
          - Transaction savepoints support
          - DateTime inflation support